--- a/model_of_the_transmission_system_with_crypto.tex
+++ b/model_of_the_transmission_system_with_crypto.tex
@@ -1,7 +1,7 @@
 \section[Модели систем передачи информации]{Модели систем передачи информации с криптографической защитой}\index{канал связи!защищённый|(}\index{канал связи!открытый|(}
 \selectlanguage{russian}
 
-Простая модель системы передачи с криптографической защитой представлена на рис.~\ref{pic:model-simple}. На рисунке показаны легальный отправитель, легальный получатель, и криптоаналитик, который пытается нарушить безопасность информации в системе. Данные в системе передаются по открытому каналу связи. Можно также говорить, что криптографические преобразования на стороне отправителя и получателя позволили им создать \emph{защищённый канал связи} поверх открытого канала, как показано на рис.~\ref{pic:model-simple-with-channel}.
+Простая модель системы передачи с криптографической защитой представлена на рис.~\ref{pic:model-simple}. На рисунке показаны легальный отправитель, легальный получатель и криптоаналитик, который пытается нарушить безопасность информации в системе. Данные в системе передаются по открытому каналу связи. Можно также говорить, что криптографические преобразования на стороне отправителя и получателя позволили им создать \emph{защищённый канал связи} поверх открытого канала, как показано на рис.~\ref{pic:model-simple-with-channel}.
 
 \begin{figure}[!thb]
 	\centering
