--- a/model_of_the_transmission_system_with_crypto.tex
+++ b/model_of_the_transmission_system_with_crypto.tex
@@ -41,7 +41,7 @@
 
 Следует отличать \emph{шифрование} от \emph{кодирования}, будь то кодирование источника или канала. Под кодированием источника понимается преобразование информации для более компактного хранения, а под кодированием канала -- для повышения помехоустойчивости.
 
-Модель системы передачи информации с обеспечением аутентичности передаваемых сообщений выглядит как показано на рис.~\ref{pic:model-auten}.
+Модель системы передачи информации с обеспечением аутентичности передаваемых сообщений выглядит, как показано на рис.~\ref{pic:model-auten}.
 
 \begin{figure}[!thb]
 	\centering
