--- a/secret-sharing-shamirs.tex
+++ b/secret-sharing-shamirs.tex
@@ -14,7 +14,7 @@
 \begin{itemize}
 	\item выбирает несекретное большое простое число $p$ ($p > M$);
 	\item в качестве свободного члена секретного многочлена полагает разделяемый секрет $a_0 = M$;
-	\item выбирает остальные секретные коэффициенты многочлена $a_1, \dots, a_{k-1}$, меньшие $p$;
+	\item выбирает остальные секретные коэффициенты многочлена $a_1, \dots, a_{k-1}$, меньшие, чем $p$;
 	\item выбирает $N$ различных $x$, таких что $0 < x_i < p$;
 	\item для каждого выбранного $x_i$ вычисляет соответствующий $y_i$, подставляя значения в формулу многочлена
 		\[ y_i = P( x_i ) = a_{K-1}x_i^{K-1} + \dots + a_1 x_i + a_0 \mod p ;\]
