--- a/secret-sharing-blackleys.tex
+++ b/secret-sharing-blackleys.tex
@@ -23,7 +23,7 @@
 	\item раздаёт каждой стороне по следу в виде коэффициентов общего уравнения гиперплоскости $C^i_1, C^i_2, \dots, C^i_{K}, C^i_{K+1}$ и общему модулю $p$.
 \end{itemize}
 
-Если стороны могут собраться вместе и получить не менее чем $K$ различных гиперплоскостей, то составив и решив систему уравнений с $K$ неизвестными, они смогут получить все координаты точки $x_1, x_2, \dots, x_k$:
+Если стороны могут собраться вместе и получить не менее чем $K$ различных гиперплоскостей, то, составив и решив систему уравнений с $K$ неизвестными, они смогут получить все координаты точки $x_1, x_2, \dots, x_k$:
 
 \[ \left\{ \begin{array}{l}
     C^1_1 x_1 + C^1_2 x_2 + \dots + C^1_K x_K + C^1_{K+1} = 0 \mod p, \\
