--- a/secret-sharing.tex
+++ b/secret-sharing.tex
@@ -23,7 +23,7 @@
 
 Предположим, что имеется $N$ легальных пользователей
     \[ \{ U_1, U_2, \dots, U_N \}, \]
-которым нужно сообщить (открыть, получить доступ к) общий секрет $K$.
+которым нужно сообщить (открыть, предоставить в доступ) общий секрет $K$.
 
 Секрет может быть доступен только определённым коалициям\index{распределение секрета!по коалициям}, например:
 \[ \begin{array}{l}
