--- a/mti.tex
+++ b/mti.tex
@@ -5,7 +5,7 @@
 
 Здесь к открытым данным относятся:
     \[ p, ~~ g, ~~ \PK_A = g^a \mod p, ~~ \PK_B = g^b \mod p. \]
-Каждый пользователь $A$ и $B$ обладает парой долговременных ключей для \emph{схемы шифрования с открытым ключом}: закрытым ключом расшифрования $\SK$ и открытым ключом шифрования $\PK$.
+Каждый из пользователей $A$ и $B$ обладает парой долговременных ключей для \emph{схемы шифрования с открытым ключом}: закрытым ключом расшифрования $\SK$ и открытым ключом шифрования $\PK$.
 \[ \begin{array}{ll}
     A: & ~ \SK_A = a, ~~ \PK_A = g^a \mod p, \\
     B: & ~ \SK_B = b, ~~ \PK_B = g^b \mod p. \\
