--- a/modular_ariphmetics.tex
+++ b/modular_ariphmetics.tex
@@ -64,17 +64,17 @@
 
 \begin{enumerate}
 	\item $c := 175$;
-	\item $c := 175^2 \mod 257 = 42; $\\
+	\item $c := 175^2 \mod 257 = 42, $\\
 		$c := 42 \times 175 \mod 257 = 154;$
-	\item $c := 154^2 \mod 257 = 72; $\\
+	\item $c := 154^2 \mod 257 = 72, $\\
 		$c := 72 \times 175 \mod 257 = 7;$
 	\item $c := 7^2 \mod 257 = 49; $
-	\item $c := 49^2 \mod 257 = 88; $\\
+	\item $c := 49^2 \mod 257 = 88, $\\
 		$c := 88 \times 175 \mod 257 = 237;$
 	\item $c := 237^2 \mod 257 = 143; $
-	\item $c := 143^2 \mod 257 = 146; $\\
+	\item $c := 143^2 \mod 257 = 146, $\\
 		$c := 146 \times 175 \mod 257 = 107;$
-	\item $c := 107^2 \mod 257 = 141; $\\
+	\item $c := 107^2 \mod 257 = 141, $\\
 		$c := 141 \times 175 \mod 257 = 3;$
 	\item Ответ: 3. Потребовалось 7 возведений в квадрат и 5 умножений.
 \end{enumerate}
