--- a/ipsec.tex
+++ b/ipsec.tex
@@ -152,7 +152,7 @@ IPsec определяет:
 	\caption{Заголовок AH пакета\label{fig:ipsec-ah}}
 \end{figure}
 
-Аутентификатор сообщения определяется так же, как и в протоколе ESP -- усечённое до 96 бит значение $\HMAC(Ka', m)$, вычисленное стандартным способом.
+Аутентификатор сообщения определяется так же, как и в протоколе ESP -- усечённое до 96-ти бит значение $\HMAC(Ka', m)$, вычисленное стандартным способом.
 
 На рис.~\ref{fig:ipsec-ah-modes} показано применение протокола в транспортном и туннельном режимах.
 
