--- a/gsm3.tex
+++ b/gsm3.tex
@@ -30,7 +30,7 @@
 
 Алгоритмы $fi$ не фиксированы стандартом и выбираются при реализациях.
 
-Из оставшихся недостатков защиты персональных данных можно перечислить:
+Из оставшихся недостатков защиты персональных данных можно перечислить.
 \begin{enumerate}
     \item Уникальный идентификатор SIM-карты IMSI по-прежнему передаётся в открытом виде, что позволяет идентифицировать абонентов по началу сеанса регистрации SIM-карты в сети.
     \item Шифрование и аутентификация производятся только между телефоном и базовой станцией, а не между двумя телефонами. Это является необходимым условием для подключения СОРМ (Система технических средств для обеспечения функций оперативно-розыскных мероприятий) по закону <<О связи>>. С другой стороны, это повышает риск нарушения конфиденциальности персональных данных.
