--- a/secret-sharing-brickells.tex
+++ b/secret-sharing-brickells.tex
@@ -3,7 +3,7 @@
 
 Рассмотрим схему Брикелла (\langen{Ernest Francis Brickell},~\cite{Brickell:1990}) распределения секрета по коалициям.
 
-По-прежнему,
+По-прежнему
     \[ \{ U_1, U_2, \dots, U_N \} \]
 -- легальные пользователи. Пусть $\Z_p$ -- кольцо целых чисел по модулю $p$. Рассмотрим векторы
     \[ \mathcal{U} = \left\{ (u_1, u_2, \dots, u_d) \right\}, ~~ u_i \in \Z_p \]
