--- a/generators.tex
+++ b/generators.tex
@@ -14,7 +14,7 @@
 	\item результат работы счётчика элементарных частиц, работа с которым включена в лабораторный практикум по общей физике для студентов первого курса МФТИ;
 	\item время между нажатиями клавиш на клавиатуре персонального компьютера или расстояние, которое проходит <<мышь>> во время движения;
 	\item время между двумя пакетами, полученными сетевой картой;
-	\item тепловой шум, измеряемый звуковой картой на входе аналогового микрофона, даже в отсутствии самого микрофона.
+	\item тепловой шум, измеряемый звуковой картой на входе аналогового микрофона, даже в отсутствие самого микрофона.
 \end{itemize}
 
 Хотя для всех этих процессов можно предсказать приблизительное значение, последний бит значения (чётное или нечётное) будет оставаться достаточно случайным для практических целей. С учётом данной поправки их можно называть надёжными или качественными генераторами случайных чисел.
