--- a/generators.tex
+++ b/generators.tex
@@ -17,7 +17,7 @@
 	\item тепловой шум, измеряемый звуковой картой на входе аналогового микрофона, даже в отсутствии самого микрофона.
 \end{itemize}
 
-Хотя для всех этих процессов можно предсказать приблизительное значение, последний бит значения (чётное или нечётное) будет оставаться достаточно случайным для практических целей. С учётом данной поправки их можно называть надёжными или качественными генераторами случайных чисел.
+Хотя для всех этих процессов можно предсказать приблизительное значение (чётное или нечётное), его последний бит будет оставаться достаточно случайным для практических целей. С учётом данной поправки их можно называть надёжными или качественными генераторами случайных чисел.
 
 Однако к генератору случайных чисел предъявляются и другие требования. Кроме уже указанного критерия \emph{качественности} или \emph{надёжности}, генератор должен быть \emph{быстрым} и \emph{дешёвым}. Быстрым -- чтобы получить большой объём случайной информации за заданный период времени. И дешёвым -- чтобы его можно было бы использовать на практике. Количество случайной информации от перечисленных выше генераторов составляет не более десятков килобайт в секунду (для теплового шума), и значительно меньше, если мы будем требовать ещё и равномерность распределения полученных случайных чисел.
 
