--- a/groups.tex
+++ b/groups.tex
@@ -18,7 +18,7 @@
     \[ \forall a,b \in \Gr: a \circ b = b \circ a, \]
 то такую группу называют \emph{коммутативной} (или \emph{абелевой}).
 
-Если операция в группе задана как умножение <<$\cdot$>>, то группа называется \emph{мультипликативной}, Для мультипликативной группы будем использовать следующие соглашения об обозначениях:
+Если операция в группе задана как умножение <<$\cdot$>>, то группа называется \emph{мультипликативной}. Для мультипликативной группы будем использовать следующие соглашения об обозначениях:
 \begin{itemize}
 	\item нейтральный элемент: $e \equiv 1$;
 	\item обратный элемент: $a^{-1}$;
