--- a/groups.tex
+++ b/groups.tex
@@ -67,7 +67,7 @@
             \[ d_i = \gcd(i, |\Gr|) \neq 1 \]
         c $|\Gr|$, породят подгруппы
             \[ \{ g^i, g^{2i}, g^{3i}, \dots, g^{\frac{i}{d_i} |\Gr|} = 1\}, \]
-        так как степень последнего элемента кратна $|\Gr|$; следовательно такие $g^i$ образуют циклические подгруппы порядка $d_i$.
+        так как степень последнего элемента кратна $|\Gr|$; следовательно, такие $g^i$ образуют циклические подгруппы порядка $d_i$.
 \end{itemize}
 
 Из предыдущего утверждения следует, что число генераторов в циклической группе равно
