--- a/groups_of_ec_points_over_finite_fields.tex
+++ b/groups_of_ec_points_over_finite_fields.tex
@@ -234,7 +234,7 @@
 
 \end{itemize}
 
-Найденный порядок точки $A = (-8,7)$ равен 12, следовательно она является генератором всей группы.
+Найденный порядок точки $A = (-8,7)$ равен 12, следовательно, она является генератором всей группы.
 
 В таблице~\ref{tab:elliptic-group-sample} найдены порядки точек и циклические подгруппы группы точек $\E(\Z_p)$ такой же эллиптической кривой
     \[ y^2 = x^3 + 5 x + 6 \mod 17. \]
