--- a/secret-sharing-brickells.tex
+++ b/secret-sharing-brickells.tex
@@ -71,7 +71,7 @@
 
 Запишем
     \[ (1,0,0) = c_1 (0,2,0) + c_2 (2,0,7) + c_3 (0,5,7) + c_4 (0,2,9). \]
-Ясно, что $c_2 \neq 0$, и коалициями пользователей, которые дают единичный вектор и, следовательно, могут восстановить секрет, являются:
+Ясно, что $c_2 \neq 0$ и коалициями пользователей, которые дают единичный вектор и, следовательно, могут восстановить секрет, являются:
 \[ \begin{array}{l}
     C_1 = \{ U_1, U_2, U_3 \}, \\
     C_2 = \{ U_1, U_2, U_4 \}, \\
