--- a/diffie-hellman.tex
+++ b/diffie-hellman.tex
@@ -66,7 +66,7 @@
                 \[ E \rightarrow B: ~ g^z \mod p. \]
             \item Сторона $B$ передаёт стороне $A$ сообщение:
                 \[ A \overset{E}{\nleftarrow} B: ~ g^y \mod p. \]
-            \item Сторона $E$ перехватывает сообщение $g^y \mod p$, сохраняет его и передаёт стороне $A$ своё сообщение
+            \item Сторона $E$ перехватывает сообщение $g^y \mod p$, сохраняет его и передаёт стороне $A$ своё сообщение:
                 \[ A \leftarrow E: ~ g^z \mod p \]
                 или какое-то другое.
             \item Таким образом, между сторонами $A$ и $E$ образуется общий секретный ключ $K_{AE}$, между $B$ и $E$ -- ключ $K_{BE}$, причём $A$ и $B$ не знают, что у них ключи со стороной $E$, а не с друг другом:
