--- a/diffie-hellman.tex
+++ b/diffie-hellman.tex
@@ -13,7 +13,7 @@
         \[ A \rightarrow B: ~ g^x \mod p. \]
     \item Сторона $B$ выбирает случайное число $y, ~ 2\leq y \leq (p-1)$, вычисляет и передаёт стороне $A$:
         \[ A \leftarrow B: ~ g^y \mod p. \]
-    \item Сторона $A$, используя известные ей значения $x,g^{y} \mod p$, вычисляет ключ
+    \item Сторона $A$, используя известные ей значения $x,g^{y} \mod p$, вычисляет ключ:
         \[ K_{A} =(g^{y})^{x}\mod p=g^{xy} \mod p. \]
     \item Сторона $B$, используя известные ей значения $y,g^{x} \mod p$, вычисляет ключ:
         \[ K_{B} =(g^{x})^{y}\mod p=g^{xy}\mod p. \]
