--- a/double_and_triple_ciphering.tex
+++ b/double_and_triple_ciphering.tex
@@ -38,7 +38,7 @@
 Атака для нахождения ключей без использования памяти занимает время
     \[ T = 2^{56 + 56} (T_E + T_{=}) \approx 2^{112} T_E. \]
 
-Можно заранее вычислить значения $E_{K_2}(M)$ для всех ключей и построить таблицу: индекс -- $E_{K_2}(M)$, значения поля -- набор ключей $K_2$, которые соответствуют этому значению. Атака для нахождения ключей требует время
+Можно заранее вычислить значения $E_{K_2}(M)$ для всех ключей и построить таблицу: индекс -- $E_{K_2}(M)$, значения поля -- набор ключей $K_2$, которые соответствуют этому значению. Атака для нахождения ключей требует времени
     \[ T = 2 \cdot 2^{56} T_E + 2^{56} T_{=} \approx 2^{57} T_E \]
 и памяти $M = 56 \cdot 2^{56} \approx 2^{62}$ бит $= 1$ EiB, учитывая прямой доступ по значению к возможным ключам. При нахождении соответствия берётся другая пара (открытый текст, шифротекст) и проверяется равенство для определения, правильные ключи или нет.
 
@@ -46,7 +46,7 @@
 
 \subsubsection{Атака на тройное шифрование}
 
-Атака для нахождения ключей (CCA\index{атака!с известным шифротекстом}, CPA\index{атака!с известным открытым текстом}) на наиболее стойкий вариант 3DES\index{шифр!3DES} (все три ключа $K_1$, $K_2$ и $K_3$ выбираются независимо) требует время $T \approx 2^{168} T_E$ без использования дополнительной памяти.
+Атака для нахождения ключей (CCA\index{атака!с известным шифротекстом}, CPA\index{атака!с известным открытым текстом}) на наиболее стойкий вариант 3DES\index{шифр!3DES} (все три ключа $K_1$, $K_2$ и $K_3$ выбираются независимо) требует времени $T \approx 2^{168} T_E$ без использования дополнительной памяти.
 
 Для построения таблицы запишем
     \[ D_{K_2}( D_{K_1}( C)) = E_{K_3} (M). \]
