--- a/Feistel_cipher_without_s_blocks.tex
+++ b/Feistel_cipher_without_s_blocks.tex
@@ -12,7 +12,7 @@
 
 \subsubsection[Схема Фейстеля в ГОСТ 28147-89 без s-блоков]{Схема Фейстеля в~ГОСТ~28147-89 без~s-блоков}
 
-В отличие от устаревшего алгоритма DES, блочный шифр ГОСТ без s-блоков намного сложнее для взлома, так как для него нельзя записать систему линейных уравнений:
+В отличие от устаревшего алгоритма DES блочный шифр ГОСТ без s-блоков намного сложнее для взлома, так как для него нельзя записать систему линейных уравнений:
 \[
     \begin{array}{l}
         L_1 = R_0, \\
