--- a/AES.tex
+++ b/AES.tex
@@ -66,7 +66,7 @@ AES -- это раундовый\index{шифр!раундовый} блочны
 
 \subsection{Операции одного раунда шифрования}
 
-В каждом раунде шифра AES, кроме последнего раунда, производятся следующие 4 операции:
+В каждом раунде шифра AES, кроме последнего, производятся следующие 4 операции:
 \begin{itemize}
   \item замена байтов, $\mathsf{SubBytes}$;
   \item сдвиг строк, $\mathsf{ShiftRows}$;
