--- a/ECIES.tex
+++ b/ECIES.tex
@@ -6,7 +6,7 @@
 \begin{itemize}
 	\item ENC (\langen{Encryption}) -- блочный режим шифрования (в том числе простое гаммирование, 3DES\index{шифр!3DES}, AES\index{шифр!AES}, MISTY1\index{шифр!MISTY1}, CAST-128\index{шифр!CAST-128}, Camelia\index{шифр!Camelia}, SEED\index{шифр!SEED});
 	\item KA (\langen{Key Agreement}) -- метод для генерации общего секрета двумя сторонами (оригинальный метод, описанный в протоколе Диффи~---~Хеллмана\index{протокол!Диффи~---~Хеллмана}~\cite{Diffie:Hellman:1976} либо его модификации~\cite{Miller:1986});
-	\item KDF (\langen{Key Derivation Function}) -- метод получения ключей из ключевой и дополнительной информации;
+	\item KDF (\langen{Key Derivation Function}) -- метод получения ключей из основной и дополнительной информации;
 	\item HASH -- криптографическая хэш-функция (SHA-1\index{хэш-функция!SHA-1}, SHA-2\index{хэш-функция!SHA-2}, RIPEMD\index{хэш-функция!RIPEMD}, SHA-1\index{хэш-функция!WHIRLPOOL});
 	\item MAC (\langen{Message Authentication Code}) -- функция вычисления имитовставки\index{имитовставка} (DEA, ANSI X9.71, MAC1, HMAC-SHA-1, HMAC-SHA-2, HMAC-RIPEMD, CMAC-AES).
 \end{itemize}
