--- a/block_ciphers.tex
+++ b/block_ciphers.tex
@@ -20,7 +20,7 @@
 	\item $K = f \left( M, C \right)$ должно вычисляться не быстрее, чем $\left| \group{K} \right|$ операций шифрования.
 \end{itemize}
 
-Если размер ключа достаточно большой (от 128 бит и выше), то функцию блочного шифрования, удовлетворяющую указанным выше условиям, можно называть надёжной.
+Если размер ключа достаточно большой (от 128-ми бит и выше), то функцию блочного шифрования, удовлетворяющую указанным выше условиям, можно называть надёжной.
 
 Блочные шифры делят на два больших класса по методу построения.
 \begin{itemize}
