--- a/groups.tex
+++ b/groups.tex
@@ -100,7 +100,7 @@
     12^3 = -1 \mod 19, \\
     12^6 = 1 \mod 19, \\
 \end{array} \]
-12 -- генератор подгруппы 6 порядка. Является ли 13 генератором?
+12 -- генератор подгруппы 6-го порядка. Является ли 13 генератором?
 \[ \begin{array}{l}
     13^2 = -2 \mod 19, \\
     13^3 = -7 \mod 19, \\
