--- a/secret-sharing-blackleys.tex
+++ b/secret-sharing-blackleys.tex
@@ -34,7 +34,7 @@
 Если собрано меньшее количество следов (уравнений гиперплоскостей), то их будет недостаточно для решения системы уравнений.
 
 \example
-Приведём пример разделения секрета по схеме Блэкли в $\GF{11}$. При разделении секрета $M$ используя $(3,N)$ схему Блэкли участники получили следы $(4, 8, 2, 6)$, $(2, 6, 8, 3)$, $(6, 8, 4, 1)$. Зная, что следы представляют собой коэффициенты в уравнении плоскости общего вида, а исходный секрет -- первую координату точки пересечения плоскостей, составляем систему уравнений для нахождения координаты этой точки:
+Приведём пример разделения секрета по схеме Блэкли в $\GF{11}$. При разделении секрета $M$ используя $(3,N)$-схему Блэкли участники получили следы $(4, 8, 2, 6)$, $(2, 6, 8, 3)$, $(6, 8, 4, 1)$. Зная, что следы представляют собой коэффициенты в уравнении плоскости общего вида, а исходный секрет -- первую координату точки пересечения плоскостей, составляем систему уравнений для нахождения координаты этой точки:
 
 \[ \left\{\begin{aligned}
    \left( 4\cdot x_1 + 8\cdot x_2 + 2\cdot x_3 + 6 \right) &= 0 &\mod 11,  \\
