--- a/classification_by_symmetry.tex
+++ b/classification_by_symmetry.tex
@@ -9,6 +9,6 @@
 
 Если ключ расшифрования получить из ключа шифрования вычислительно сложно, то такие криптосистемы называют криптосистемами \emph{с открытым ключом}\index{криптосистема!с открытым ключом} или \emph{асимметричными} криптосистемами\index{криптосистема!асимметричная}. Некоторые из них рассмотрены в главе~\ref{chapter-public-key}. Все используемые на сегодняшний день асимметричные криптосистемы работают с открытым текстом, составляющим несколько сотен или тысяч бит, поэтому классификация таких систем по объёму обрабатываемых за одну операцию данных не производится.
 
-Алгоритм, который выполняет отображение аргумента произвольной длины в значение фиксированной длины, называется \emph{хэш-функцией}. Если для такой хэш-функции выполняются определённые свойства, например, устойчивости к поиску коллизий, то это уже \emph{криптографическая хэш-функция}. Такие функции рассмотрены в главе~\ref{chapter-hash-functions}.
+Алгоритм, который выполняет отображение аргумента произвольной длины в значение фиксированной длины, называется \emph{хэш-функцией}. Если для такой хэш-функции выполняются определённые свойства, например, устойчивость к поиску коллизий, то это уже \emph{криптографическая хэш-функция}. Такие функции рассмотрены в главе~\ref{chapter-hash-functions}.
 
 Для проверки аутентичности сообщения с использованием общего секретного ключа отправителя и получателя используется \emph{код аутентификации [сообщения]} (\emph{имитовставка}, \langen{message authentication code, MAC}), рассмотренный в разделе~\ref{section-MAC}. Его аналогом в криптосистемах с открытым ключом является \emph{электронная подпись}, алгоритмы генерации и проверки которой рассмотрены в главе~\ref{chapter-public-key} вместе с алгоритмами асимметричного шифрования.
