--- a/GOST_R_34.11-94.tex
+++ b/GOST_R_34.11-94.tex
@@ -3,7 +3,7 @@
 
 Представим описание устаревшего российского стандарта хэш-функции ГОСТ Р 34.11-94~\cite{GOST-94}.
 
-Пусть $X$ -- последовательность длины 256 бит. Запишем $X$ тремя способами в виде конкатенации блоков:
+Пусть $X$ -- последовательность длины 256 бит. Запишем $X$ тремя способами в виде конкатенации (сцепления) блоков:
 \[ \begin{array}{ll}
     X & = X_4 ~\|~ X_3 ~\|~ X_2 ~\|~ X_1 = \\
     & = ~ \eta_{16} ~\|~ \eta_{15} ~\|~ \dots ~\|~ \eta_2 ~\|~ \eta_1 = \\
