--- a/GOST_R_34.12-2015.tex
+++ b/GOST_R_34.12-2015.tex
@@ -12,7 +12,7 @@
   \label{fig:kuznechik-step}
 \end{figure}
 
-Нелинейное преобразование $S$ разбивает блок данных из 128 бит на 16 блоков по 8 бит в каждом, как показано на рис.~\ref{fig:kuznechik-s}.
+Нелинейное преобразование $S$ разбивает блок данных из 128-ми бит на 16 блоков по 8 бит в каждом, как показано на рис.~\ref{fig:kuznechik-s}.
 
 \begin{figure}[htb]
 	\centering
