Add solution per #4444 by DidenkoAndre

--- a/tasks.tex
+++ b/tasks.tex
@@ -486,6 +486,13 @@ $12$ & $1$ & $12$ & $-11$ & $-10$ & $4$ & $2$,$11$ &$(12; 2)$, $(12; 11)$ \\
 \textbf{Ответ:} исходный многочлен: $F\left( x \right) = ax^2  + bx + M = 6x^2  + 2x + 4$. Секретом является последний свободный многочлен $M = 4$.
 \bigbreak
 
-\tasknumber Используя эллиптическую кривую $y^2 = x^3 - x - 7$ над конечным полем $\mathbb{F}_{11}$, генератор $G(0; 2)$ и открытый ключ Боба $K_B(10; 9)$, Алиса сгенерировала разделяемый секрет (по схеме ECIES\index{схема!ECIES}) $S=P_x$ для последующего использования в качестве ключа шифрования и передала Бобу соответствующий секрету след $R(9; 8)$. Найдите секрет $S$, если закрытый ключ Боба $k_B = 6$.
+\tasknumber Используя эллиптическую кривую $y^2 = x^3 - 7x - 8$ над конечным полем $\mathbb{F}_{11}$, генератор $G(9; 8)$ и открытый ключ Боба $K_B(0; 5)$, Алиса сгенерировала разделяемый секрет (по схеме ECIES\index{схема!ECIES}) $S=P_x$ для последующего использования в качестве ключа шифрования и передала Бобу соответствующий секрету след $R(5; 4)$. Найдите секрет $S$, если закрытый ключ Боба $k_B = 6$.
 \medbreak
-\textbf{Ответ:} $P_x = 5$.
+\textbf{Решение и ответ:}
+\begin{itemize}
+\item $P = k_B * R = 6 * (5; 4) = (5; 7).$
+\item По шагам:
+	\[R \to 2R \to 3R \to 4R \to 5R \to 6R: \]
+	\[(5; 4) \to (10; 3) \to (0; 6) \to (0; 5) \to (10; 8) \to (5; 7). \]
+\item Ответ: $S = P_x = 5$.
+\end{itemize}
